--- a/annotation-processors/ap-demo-web/src/main/webapp/app/partials/code_editor_example.html
+++ b/annotation-processors/ap-demo-web/src/main/webapp/app/partials/code_editor_example.html
@@ -68,8 +68,8 @@
     <div class="span4">
         <div class="btn-toolbar">
             <div class="btn-group">
-                <button class="btn btn-primary" ng-click="save(codeJavaScript, 'javaScript')">Alterar</button>
-                <button class="btn btn-primary" ng-click="run('javaScript')">Executar</button>
+                <button class="btn btn-primary" ng-click="save(codeJavaScript, 'javascript')">Alterar</button>
+                <button class="btn btn-primary" ng-click="run('javascript')">Executar</button>
             </div>
         </div>
     </div>
@@ -88,7 +88,7 @@
         <textarea readonly="true" ng-model="groovyResult" rows="15" class="input-xxlarge" ></textarea>
     </div>
     <div class="span4">
-        <textarea readonly="true" ng-model="javaScriptResult" rows="15" class="input-xxlarge"></textarea>
+        <textarea readonly="true" ng-model="javascriptResult" rows="15" class="input-xxlarge"></textarea>
     </div>
     <div class="span4">
         <textarea readonly="true" ng-model="pythonResult" rows="15" class="input-xxlarge"></textarea>
