--- a/annotation-processors/ap-demo-web/src/main/webapp/app/partials/repository_example.html
+++ b/annotation-processors/ap-demo-web/src/main/webapp/app/partials/repository_example.html
@@ -31,8 +31,17 @@
 
 -->
 
-<div class="span10">
-    <textarea ui-codemirror="{mode: 'text/javascript', lineNumbers: true, matchBrackets: true}" ng-model="code"></textarea>
-    <button class="btn btn-primary" ng-click="save(code)">Executar</button>
-    <textarea readonly="true" ng-model="result" class="input-xxlarge"/>
+<div class="row-fluid">
+    <div class="span6">
+        <span class="label label-info">Server</span>
+        <textarea ui-codemirror="{mode: 'text/javascript', lineNumbers: true, matchBrackets: true}" ng-model="code"></textarea>
+        <button class="btn btn-primary" ng-click="save(code)">Executar</button>
+        <textarea readonly="true" ng-model="result" class="input-xxlarge"></textarea>
+    </div>
+    <div class="span6">
+        <span class="label label-warning">Client</span><input ng-model="param"/>
+        <textarea ui-codemirror="{mode: 'text/javascript', lineNumbers: true, matchBrackets: true}" ng-model="code"></textarea>
+        <button class="btn btn-primary" ng-click="runClient(code)">Executar</button>
+        <textarea readonly="true" ng-model="resultClient" class="input-xxlarge"></textarea>
+    </div>
 </div>
